fix: fix probleme avec la doc
